# EMNLP25-WAS

./: .gitignore  README.md  pyproject.toml
eval_test/: evaluate.py  utils.py
gpt-fast/: generate.py  model.py
gpt-fast/scripts/: base_run.sh  prepare.sh  run.sh  tp_run.sh
kernels/: compile_wrapper.py  sparse_gemv.py
scripts/: evaluate.bash  grab_acts.bash  greedy.bash  tpe.bash
was/: grab_acts.py  greedyopt.py  ppl_test.py  self_attn.py  tpe.py
